docs/style.css
/* ... */
.todocontent {
display: grid;
grid-template-columns: 1fr;
grid-template-rows: repeat(1, 1fr);
max-width: 100%;
background-color: #dbe1df;
flex-grow: 0;
border-radius: 10px;

}

.expandbutton {
    width: 1.8rem;
    height: 1.8rem;
}

.datebutton {
    width: auto !important;

    border: none;
    background-color: transparent;
    border: 1px dashed black;

}
 
.todotitleline {
    display: inline;
    margin-bottom: 0;
padding: 0;
word-wrap: break-word;
word-break: break-all;
}

.buttoncontainer {
    display: flex;


min-width: 16rem;
justify-items: start;
gap: .3rem;

}

.complete {
    background-color: lightgreen;
    border-radius: 10px;
}

.deletewhendone {
    flex-grow: 1;
    background-color: rgba(255, 0, 0, 0.4);
   
   
}


.prioritywrapperhigh, .prioritywrapperlow, .prioritywrappermed {
    flex-shrink: 0;
}

.buttoncontainer > * {
    display: inline;
    justify-self: center;
}

.todotitles {
margin: 0;

padding: 0;
}

.todobutton, .prioritytodobutton {
    flex-shrink: 0;
    display: inline-block;
    align-self: center;
    justify-self: stretch;
  max-width: 12.4rem;
    width: 1.6rem;
    height: 1.6rem;
    font-size: .8rem;
  

}


.footer {
    text-align: center;
}

.bighide {
    display: none;
}

.modal {

width: 100%;
height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(15px);
    -webkit-backdrop-filter: blur(15px);
    visibility: hidden;
    position: absolute;
    opacity: 1;
    

    transition: visibility 0s linear 0s, opacity .25s 0s, transform .25s;
 
}

.closebutton {
    text-align: center;
    font-size: 2rem;
    border-radius: 12px;
    background-color: lightgray;
    width: 3rem;
    margin-bottom: 10px;
    align-self: center;
    justify-self: center;
  
}

.show-modal {
    opacity: 1;
    visibility: visible;
    transform: scale(1.0);
  
}

.modalback {
    backdrop-filter: blur(6px);
    -webkit-backdrop-filter: blur(6px);
    visibility: visible;
}

.modal-content {
    display: grid;
    box-sizing: border-box;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr 1fr 10fr;
    position: absolute;
    
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    width: 60%;
    height: 60%;
border-radius: 30px;
box-sizing: border-box;
padding: 2rem;


}

.ghost {
    opacity: 0.5;
}

.dateinput {
width: 149px;
}

.inputcontainer {
 padding: 10%;
 padding-top: 0
 ;
    font-family: monospace;
    font-size: 1rem;
    


}

.flexforlabel > input, .flexforlabel > select {
margin-top: 8px;
}

.flexforlabel > select {
    width: 149px;
    background-color: white;
}
 

.project {
    padding: 0 3rem 0 3rem;
    height: 89.35%;
    
}




.hide {
    display: none;
    visibility: hidden;
}

.projectform {
    
    display: flex;
    flex-flow: column;
    height: 100%;
    justify-content: space-between;
}

.redback {
    background-color: rgb(255, 0, 0, 0.16);
 
    border-radius: 10px;
}
.red.redback {
    background-color: lightgray;
}

input.redback {
    border-radius: 0px;
}

.todoform {

    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(4, 1fr);
height: 100%;
width: 100%;
max-width: 100%;
}




.todoform > label {
    font-size: 1.5rem;
    margin: 20px;
}

.submittodo {
    height: min-content;
    

    border-radius: 8px;
    grid-column: 2;
    justify-self: left;
    padding: .5rem;

}
.cancelsubmit {
    
    justify-self: left;
    grid-column: 1;
    grid-row: 4;
    padding: 0.5rem;
    border-radius: 8px;
    text-align: center;
    align-self: flex-start;
}

.todoform > input {
    border-radius: 5px;
    align-self: center;
}



.projflex {
    display: flex;
    justify-content: space-evenly;
    font-family: monospace;
    font-size: 1.2rem;
    align-items: center;

}


.titleinputbar {
    width: 100%;
    
    margin-bottom: .5rem;
    height: 2.5rem;
    font-size: 1.0rem;
}



.inputgrid {
    display: grid;
    grid-template-columns: repeat(1,1fr);
    grid-template-rows: repeat(auto, 1fr);

}

.todoflex {
    border: 2px solid rebeccapurple;
    display: grid;
    grid-template-columns: repeat(1,1fr);
    justify-items: center;
    
height: 8rem;
    width: 90%;
}



.project {

display: flex;
flex-flow: column;
justify-content: space-between;

}
 .project > input {
    align-self: flex-start;
 }



.createnewheading {
    margin: 0;
    margin-bottom: 1.5rem;
    align-self: center;
    font-size: 2rem;
font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

.changebg {
    background-color: rgb(128, 128, 128, 0.7);
   
}

.todoselect, .projectselect {
    margin: 0;
    align-self: center;
    margin-bottom: 20px;
    background-color: lightgray;
    width: auto;
    height: auto;
padding: 10px;
    font-size: 1.4rem;
}
.prioritybox
{
    display: flex;
    justify-content: space-between;
    width: 149px;
    font-weight: bold;
}

.prioritywrapperlow {
    background-color: rgb(0, 128, 0, 0.2);
    display: inline;
}

.prioritywrappermed {
    background-color: rgba(255, 255, 0, 0.2);
    display: inline;
}

.prioritywrapperhigh {
    background-color: rgb(255, 0, 0, 0.5);
    display: inline;
}

.deleteprojectbutton {
    background-color: rgb(240, 128, 128, 0.5);
    font-weight: bold;
    border-radius: 8px;
    border: none;
    width: auto;
}


.closebuttonbox {
    display: flex;
    justify-content: space-between;
}

.createnewbox {
    display: flex;
    justify-content: space-evenly;
}

.flexforlabel > label, .flexforlabel > input {
margin-bottom: 5px;
}

.flexforlabel {
    width: 100%;
    display: flex;
    align-items: baseline;
    justify-content: space-around;
 
   
}

.submitbutton, .projectsubmit {
margin-top: 20px;
display: inline;
width: 5rem;
height: 4rem;

}

.projectbuttons {
    display: grid;
    grid-template-columns: repeat(2, 1fr);

    justify-items: right;
    margin-bottom: 20px;


    padding: 0px 20px 0px 20px;
}
/* ... */

